--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "my-app",
+  "name": "turnip-stalker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^3.6.14",
+    "@mantine/hooks": "^3.6.14",
+    "@mantine/notifications": "^3.6.14",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
