--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "turnip-stalker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.rendelacruz.com/turnip-stalker/",
   "dependencies": {
     "@mantine/core": "^3.6.14",
     "@mantine/hooks": "^3.6.14",
@@ -13,6 +14,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
