--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "tabler-icons-react": "^1.37.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
