--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "semi": true
+  "semi": true,
+  "jsxSingleQuote": true
 }
